--- a/page.html
+++ b/page.html
@@ -2,15 +2,17 @@
 <html>
 <body>
 
-<canvas id="myCanvas" width="300" height="300" style="border:1px solid #d3d3d3;">
+<div align="center">
+<canvas id="myCanvas" width="500" height="750" style="border:1px solid #d3d3d3;">
 Your browser does not support the HTML5 canvas tag.</canvas>
+</div>
 
 <script>
 var c = document.getElementById("myCanvas");
 var ctx = c.getContext("2d");
 ctx.beginPath();
 ctx.moveTo(0, 0);
-ctx.lineTo(300, 300);
+ctx.lineTo(500, 750);
 ctx.stroke();
 </script>
 
