--- a/page.html
+++ b/page.html
@@ -11,8 +11,7 @@ Your browser does not support the HTML5 canvas tag.</canvas>
 var c = document.getElementById("myCanvas");
 var ctx = c.getContext("2d");
 ctx.beginPath();
-ctx.moveTo(0, 0);
-ctx.lineTo(500, 750);
+ctx.rect(20, 20, 150, 100);
 ctx.stroke();
 </script>
 
