--- a/page.html
+++ b/page.html
@@ -20,8 +20,6 @@ Your browser does not support the HTML5 canvas tag.</canvas>
         ctx.beginPath();
         draw_rectangle(y, x);
         ctx.stroke();
-        if(y*50+50<750)
-            y++;
     }
     function key_handler(event)
     {
@@ -33,13 +31,20 @@ Your browser does not support the HTML5 canvas tag.</canvas>
         if(event.keyCode == left_key && x > 0)
             x--;
 
+        draw_frame();
+    }
+    function push_down()
+    {
+        if(y*50+50<750)
+            y++;
+        draw_frame();
     }
 var y = 0;
 var x = 1;
 var c = document.getElementById("myCanvas");
 var ctx = c.getContext("2d");
     
-setInterval(draw_frame, 1000);
+setInterval(push_down, 1000);
 window.addEventListener("keydown", key_handler);
 </script>
 
