--- a/page.html
+++ b/page.html
@@ -28,10 +28,12 @@ Your browser does not support the HTML5 canvas tag.</canvas>
         var left_key = 37;
         var right_key = 39;
         if(event.keyCode == right_key && x*dim+dim<width)
-            x++;
+            if(!overlap(y, x+1))
+                x++;
         
         if(event.keyCode == left_key && x > 0)
-            x--;
+            if(!overlap(y, x-1))
+                x--;
 
         draw_frame();
     }
@@ -52,6 +54,14 @@ Your browser does not support the HTML5 canvas tag.</canvas>
                 if(stored_blocks[i].Y == (y+1))
                     return true;
         return y*dim+dim == height;
+    }
+    function overlap(y, x)
+    {
+        for(i=0; i<stored_blocks.length; i++)
+            if (stored_blocks[i].X == x)
+                if(stored_blocks[i].Y == y)
+                    return true;
+        return false;
     }
     function keep_in_place(y, x, c)
     {
