--- a/page.html
+++ b/page.html
@@ -27,33 +27,38 @@ Your browser does not support the HTML5 canvas tag.</canvas>
     {
         var left_key = 37;
         var right_key = 39;
-        if(event.keyCode == right_key && x*dim+dim<width)
-            if(!overlap(y, x+1))
+        if(event.keyCode == right_key)
+            if(valid_position(y, x+1))
                 x++;
         
-        if(event.keyCode == left_key && x > 0)
-            if(!overlap(y, x-1))
+        if(event.keyCode == left_key)
+            if(valid_position(y, x-1))
                 x--;
 
         draw_frame();
     }
     function push_down()
     {
-        y++;
-        draw_frame();
-        if(touched_ground(y, x))
+        if(valid_position(y+1, x))
+        {
+            y++;
+        }
+        else
         {
             keep_in_place(y, x, c);
             generate_block();
         }
+        draw_frame();
     }
-    function touched_ground(y, x)
+    function valid_position(y, x)
     {
-        for(i=0; i<stored_blocks.length; i++)
-            if (stored_blocks[i].X == x)
-                if(stored_blocks[i].Y == (y+1))
-                    return true;
-        return y*dim+dim == height;
+        if(x < 0 || x >= max_x_blocks)
+            return false;
+
+        if(y < 0 || y >= max_y_blocks)
+            return false;
+
+        return !overlap(y, x);
     }
     function overlap(y, x)
     {
@@ -69,15 +74,18 @@ Your browser does not support the HTML5 canvas tag.</canvas>
     }
     function generate_block()
     {
+        if(valid_position(0, 1))
+        {
             y = 0;
             x = 1;
             c = '#'+Math.floor(Math.random()*16777215).toString(16);
-            draw_frame();
-            if(touched_ground(y, x))
-            {
-                document.getElementById("msg").innerHTML = "Game Over!"
-                clearInterval(push_down_interval);
-            }
+        }
+        else
+        {
+            document.getElementById("msg").innerHTML = "Game Over!"
+            clearInterval(push_down_interval);
+        }
+        draw_frame();
     }
 var y = 0;
 var x = 1;
@@ -85,6 +93,8 @@ var c = "#000000";
 var dim = 50;
 var width = 500;
 var height = 750;
+var max_y_blocks = height / dim;
+var max_x_blocks = width / dim;
 var stored_blocks = [];
 var my_canvas = document.getElementById("myCanvas");
 var ctx = my_canvas.getContext("2d");
