--- a/page.html
+++ b/page.html
@@ -16,6 +16,13 @@ Your browser does not support the HTML5 canvas tag.</canvas>
         ctx.fillStyle = C;
         ctx.fillRect(X*dim, Y*dim, dim, dim);
     }
+    function draw_piece(piece)
+    {
+        if(piece == undefined)
+            return;
+        for(block of piece.shape)
+            draw_rectangle(block[0]+piece.y_offset, block[1]+piece.x_offset, piece.color);
+    }
     function draw_frame()
     {
         ctx.clearRect(0, 0, width, height);
@@ -23,32 +30,40 @@ Your browser does not support the HTML5 canvas tag.</canvas>
         for(let i=0; i<max_y_blocks; i++)
             for(let j=0; j<max_x_blocks; j++)
                 draw_rectangle(i, j, block_matrix[i][j]);
-        draw_rectangle(y, x, c);
+        draw_piece(piece);
         ctx.stroke();
+    }
+    function valid_piece_offset(piece, delta_y, delta_x)
+    {
+        for(block of piece.shape)
+        {
+            if(!valid_position(block[0]+piece.y_offset+delta_y, 
+                               block[1]+piece.x_offset+delta_x))
+                return false;
+        }
+        return true;
     }
     function key_handler(event)
     {
         var left_key = 37;
         var right_key = 39;
         if(event.keyCode == right_key)
-            if(valid_position(y, x+1))
-                x++;
+            if(valid_piece_offset(piece, 0, 1))
+                piece.x_offset++;
         
         if(event.keyCode == left_key)
-            if(valid_position(y, x-1))
-                x--;
+            if(valid_piece_offset(piece, 0, -1))
+                piece.x_offset--;
 
         draw_frame();
     }
     function push_down()
     {
-        if(valid_position(y+1, x))
-        {
-            y++;
-        }
+        if(valid_piece_offset(piece, 1, 0))
+            piece.y_offset++;
         else
         {
-            keep_in_place(y, x, c);
+            keep_in_place(piece);
             generate_block();
         }
         draw_frame();
@@ -78,36 +93,37 @@ Your browser does not support the HTML5 canvas tag.</canvas>
         for(let i=max_y_blocks-1; i>=0; i--)
         {
             complete_line = true;
-            for(j=0; j<max_x_blocks && complete_line; j++)
+            for(let j=0; j<max_x_blocks && complete_line; j++)
                 if(!overlap(i, j))
                     complete_line = false;
             if(complete_line)
                 remove_blocks_from_line_and_shift_others(i);
         }
     }
-    function keep_in_place(y, x, c)
+    function keep_in_place(piece)
     {
-        block_matrix[y][x] = c;
+        for(block of piece.shape)
+            block_matrix[block[0]+piece.y_offset][block[1]+piece.x_offset] = piece.color;
         remove_blocks_if_complete_line();
+    }
+    function gen_shape()
+    {
+        return [[0, 0]];
     }
     function generate_block()
     {
-        if(valid_position(0, 1))
+        crt_shape = gen_shape();
+        crt_color = '#'+Math.floor(Math.random()*16777215).toString(16);
+        piece = {shape:crt_shape, color:crt_color, y_offset:0, x_offset:3};
+        if(!valid_piece_offset(piece, 0, 0))
         {
-            y = 0;
-            x = 1;
-            c = '#'+Math.floor(Math.random()*16777215).toString(16);
-        }
-        else
-        {
+            piece = undefined;
             document.getElementById("msg").innerHTML = "Game Over!"
             clearInterval(push_down_interval);
         }
         draw_frame();
     }
-var y = 0;
-var x = 1;
-var c = "#000000";
+var piece = {shape:[[0, 0], [0, 1]], color:"#000000", y_offset:0, x_offset:3};
 var dim = 50;
 var width = 500;
 var height = 750;
