--- a/page.html
+++ b/page.html
@@ -108,7 +108,17 @@ Your browser does not support the HTML5 canvas tag.</canvas>
     }
     function gen_shape()
     {
-        return [[0, 0]];
+        var shapes = [
+            [[0, 1], [1, 1], [2, 1], [3, 1]],
+            [[1, 1], [1, 2], [2, 1], [2, 2]],
+            [[0, 0], [0, 1], [1, 1], [2, 1]],
+            [[0, 2], [0, 1], [1, 1], [2, 1]],
+            [[0, 1], [1, 0], [1, 1], [1, 2]],
+            [[0, 1], [1, 0], [1, 1], [2, 0]],
+            [[0, 0], [1, 0], [1, 1], [2, 1]],
+            ];
+        let index = Math.floor(Math.random()*shapes.length)
+        return shapes[index];
     }
     function generate_block()
     {
