--- a/page.html
+++ b/page.html
@@ -15,6 +15,10 @@ Your browser does not support the HTML5 canvas tag.</canvas>
             return;
         ctx.fillStyle = C;
         ctx.fillRect(X*dim, Y*dim, dim, dim);
+        // ctx.fill();
+        ctx.lineWidth = 5;
+        ctx.strokeStyle = "#000000";
+        ctx.strokeRect(X*dim, Y*dim, dim, dim);
     }
     function draw_piece(piece)
     {
@@ -31,7 +35,7 @@ Your browser does not support the HTML5 canvas tag.</canvas>
             for(let j=0; j<max_x_blocks; j++)
                 draw_rectangle(i, j, block_matrix[i][j]);
         draw_piece(piece);
-        ctx.stroke();
+        // ctx.stroke();
     }
     function valid_piece_offset(piece, delta_y, delta_x)
     {
