renamed page to index

--- a/index.html
+++ b/index.html
@@ -2,6 +2,9 @@
 <html>
 <body>
 
+<div align="right">
+    <h3 style="float:left;">SCORE:</h3>
+</div>
 <div align="center">
 <canvas id="myCanvas" width="500" height="750" style="border:1px solid #d3d3d3;">
 Your browser does not support the HTML5 canvas tag.</canvas>
